<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_intro">Droid Desserts</string>
    <string name="donut_description">Donuts are glazed and sprinkled with candy.</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt.</string>
    <string name="ice_cream_sandwiches_description">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="order_label_text" />
    <string name="enter_name_hint">Enter your name</string>
    <string name="name_label_text">Name:</string>
    <string name="address_label_text">Address:</string>
    <string name="enter_address_hint">Enter your address</string>
    <string name="phone_label_text">Phone:</string>
    <string name="enter_phone_hint">Enter phone number</string>
    <string name="note_label_text">Note:</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="delivery_label_text">Choose a delivery method:</string>
    <string name="same_day_text">Same day messenger service</string>
    <string name="next_day_text">Next day delivery</string>
    <string name="pick_up_text">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="action_order_message">Movies orders by X.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
</resources>